feat: update RPT-03