@@ -2,14 +2,17 @@ package com.training.warehouse.service.impl;
 
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.io.ByteArrayOutputStream;
 import java.time.LocalDateTime;
 import java.time.YearMonth;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.apache.poi.ss.usermodel.Workbook;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.springframework.stereotype.Service;
 
 import com.training.warehouse.entity.InboundAttachmentEntity;
@@ -74,23 +77,43 @@ public class OutboundServiceImpl implements OutboundService {
                 endMonth);
         Map<YearMonth, List<OutboundEntity>> groupedByMonth = outboundResult.stream()
                 .collect(Collectors.groupingBy(outboundEntity -> YearMonth.from(outboundEntity.getCreatedAt())));
-        Workbook workbook = this.excelService.createWorkbook();
-        List<String> headers = List.of("id", "quantity", "expected", "actual");
-        Map<String, Number> pieData = new HashMap<>();
-        for (var outbounds: groupedByMonth.entrySet()) {
-            pieData.put(outbounds.getKey().toString(), outbounds.getValue().size());
-            List<Map<String, Object>> data = new ArrayList<>();
-            for (var outbound: outbounds.getValue()) {
+        List<String> headers = List.of("month", "id", "quantity", "expected", "actual");
+        List<Map<String, Object>> data = new ArrayList<>();
+        Map<String, Number> pieData = new LinkedHashMap<>();
+        YearMonth start = YearMonth.from(startMonth);
+        YearMonth end = YearMonth.from(endMonth);
+        YearMonth current = start;
+        while (!current.isAfter(end)) {
+            List<OutboundEntity> outbounds = groupedByMonth.getOrDefault(current, Collections.emptyList());
+            pieData.put(current.toString(), outbounds.size());
+            for (OutboundEntity outbound : outbounds) {
                 Map<String, Object> dataRow = new HashMap<>();
+                dataRow.put("month", current.toString());
                 dataRow.put("id", outbound.getId());
                 dataRow.put("quantity", outbound.getQuantity());
                 dataRow.put("expected", outbound.getExpectedShippingDate());
                 dataRow.put("actual", outbound.getActualShippingDate());
                 data.add(dataRow);
             }
-            this.excelService.addSheetToWorkbook(workbook, outbounds.getKey().toString(), headers, data);
+            if (outbounds.isEmpty()) {
+                Map<String, Object> emptyRow = new HashMap<>();
+                emptyRow.put("month", current.toString());
+                emptyRow.put("id", "");
+                emptyRow.put("quantity", "");
+                emptyRow.put("expected", "");
+                emptyRow.put("actual", "");
+                data.add(emptyRow);
+            }
+            current = current.plusMonths(1);
         }
-        this.excelService.addPieChartSheetToWorkBook(workbook, "Pie Chart", pieData);
-        return this.excelService.writeWorkbookToBytes(workbook);
+        var workbook = this.excelService.createWorkbook("late-outbound", headers, data);
+        this.excelService.addPieChart((XSSFWorkbook) workbook, "late-outbound", pieData);
+        try (ByteArrayOutputStream out = new ByteArrayOutputStream()) {
+            workbook.write(out);
+            workbook.close();
+            return out.toByteArray();
+        } catch (Exception e) {
+            throw new RuntimeException(e.getMessage());
+        }
     }
 }
